[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/score_viewer.gd" type="Script" id=1]
[ext_resource path="res://src/playlist_theme.tres" type="Theme" id=2]

[node name="ScoreViewer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreViewer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="ScoreViewer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="ScoreViewer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 4

[node name="SongIndex" type="Label" parent="ScoreViewer/ColorRect"]
margin_right = 951.0
margin_bottom = 1057.0
align = 1
valign = 1

[node name="PageIndex" type="Label" parent="ScoreViewer/ColorRect"]
margin_top = 1057.0
margin_right = 951.0
margin_bottom = 2114.0
align = 1
valign = 1
